# theater-chatbot-assignment

./: gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: play_embeddings.json
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/example/theaterapp/: ChatActivity.java  ChatAdapter.java  ChatMessage.java  LlamaRequest.java  LlamaResponse.java  MainActivity.java  Reservation.java  SeatSelectionActivity.java  WalletActivity.java
app/src/main/java/com/example/theaterapp/api/: AiService.java  ApiMessage.java  ChatRequest.java  ChatResponse.java  EmbeddingsRequest.java  EmbeddingsResponse.java  LlamaService.java  OpenAiApi.java  WitResponse.java  WitService.java
app/src/main/java/com/example/theaterapp/rag/: PlayInfo.java  RetrievalService.java
app/src/main/res/drawable/: bg_gradient.xml  bubble_theater.xml  bubble_user.xml  ic_no_ticket.xml  rounded_input.xml
app/src/main/res/layout/: activity_chat.xml  activity_main.xml  activity_seat_selection.xml  activity_wallet.xml  chat_message_item.xml  item_bot_buttons.xml  item_bot_message.xml  item_message.xml  item_user_message.xml
app/src/main/res/mipmap-anydpi-v26/: theater_logo_round.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
